--- a/styles/GosselinGourmet.css
+++ b/styles/GosselinGourmet.css
@@ -3,6 +3,9 @@ body {
      font-family:serif; 
      background-color:#FFFFFF;
 }
+li {
+     display: inline;
+}
 
 p {
      margin-left:20px;
@@ -27,7 +30,6 @@ h2 {
 }
 
 table, th, td {
-     border-color:#008080;
      border-style:solid;
      border-width:1px;
 }
@@ -55,3 +57,4 @@ td {
     font-family:monotype;
     font-style:normal; 
 }
+
