Login and Sign-up CSS
-Added styles to the Login and SignUp pages
-commented out "complete order" functionality in  GGC, instead, it just directs you to the cart page istelf

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -35,4 +35,14 @@ li a:hover {
     font-weight: bold;
 }
 
+a:hover {
+    background-color: #008080;
+    text-decoration: none;
+    color: white;
+}
+
+input{
+    color: #008080;
+    border-color: #008080;
+}
 
